--- a/WEB/common.css
+++ b/WEB/common.css
@@ -53,10 +53,6 @@
 .div_list {
   margin: 30px 10px 20px 10px;
 }
-.div_footer {
-  border: 1px solid black;
-  background-color: rgb(243, 228, 200);
-}
 .div_cast {
   display: flex;
 }
@@ -67,10 +63,19 @@
   margin-left: 10%;
 }
 .div_a {
-  color: #FBAF17;
+  color: #fbaf17;
   margin: 5px;
 }
 .div_a1 {
   color: inherit;
   margin: 5px;
+}
+.div_src {
+  width: 20px;
+  height: 20px;
+}
+.div_kda {
+  display: flex;
+  justify-content: space-between;
+  padding: 9px;
 }
